# laia

./: .dockerignore  .env-example  .env.example  .envexample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  STEP_BY_STEP.md  app.json  docker-compose.yml  manage.py  pedidos.csv  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  push-docker-image.yml
core/: settings.py  urls.py
docs/: index.md
information_requests/: admin.py  apps.py  models.py
information_requests/management/commands/: import.py
information_requests/migrations/: 0001_initial.py  0002_auto_20211015_1354.py  0002_auto_20211018_0831.py  0003_auto_20211015_1435.py  0003_auto_20230327_0959.py  0003_auto_20230522_1643.py  0003_informationrequest_user.py  0004_complaint_user_complaint.py
information_requests/tests/: test_models.py
pedidos/: admin.py  apps.py  models.py  pyproject.toml  requirements.txt
pedidos-env/: manage.py  pyproject.toml
pedidos-env/pedidos_django/: asgi.py  settings.py  urls.py
pedidos-env/tests/: test_pedidos_env.py
pedidos/migrations/: 0001_initial.py  0002_auto_20210909_0903.py  0002_auto_20210920_0813.py  0002_auto_20210920_0833.py  0003_rename_esfera_orgao_orgao_esfera.py  0004_denuncia.py  0005_auto_20210927_0806.py  0006_alter_denuncia_status.py  0007_auto_20210928_0411.py  0008_auto_20210928_2240.py
pedidos/pedidos_django/: settings.py  wsgi.py
pedidos/tests/: test_pedidos.py
pedidos_django/: asgi.py  settings.py  wsgi.py
pedidos_django/datasets/: admin.py  models.py
