[tool.poetry]
name = "pedidos-env"
version = "0.1.0"
description = ""
authors = ["Dados Abertos de Feira <dadosabertosdefeira@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.13"
Django = "^3.2.13"
python-decouple = "^3.4"
django-public-admin = "^0.0.5"
python-dateutil = "^2.8.2"
dj-database-url = "^0.5.0"
django-on-heroku = "^1.1.2"

gunicorn = "^20.1.0"
sentry-sdk = "^1.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
pytest-django = "^4.4.0"
model-bakery = "^1.3.3"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
